# xnor

./: .gitignore  Cargo.toml  README.md  flake.nix  openapi.json  srvcs.yaml
.github/workflows/: build.yml  cleanup.yml
src/: api.rs  client.rs  config.rs  health.rs  lib.rs  main.rs  telemetry.rs
tests/: openapi_snapshot.rs  routes.rs
