[package]
name = "srvcs-xnor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "srvcs_xnor"
path = "src/lib.rs"

[[bin]]
name = "srvcs-xnor"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.11", features = ["trace", "request-id", "catch-panic"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }

[dev-dependencies]
http-body-util = "0.1.3"
